--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ Flask==3.0.2
 requests==2.31.0
 gunicorn==21.2.0
 flask-cors==4.0.0
+langdetect==1.0.9
+sentence-transformers==2.2.2
+numpy==1.26.4
+torch==2.2.1
